avoid wrapping causing bad layouts on the broker UI

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -2244,6 +2244,7 @@ i.mq-master {
 }
 
 .mq-group-rectangle-label, .mq-profile-rectangle-label, .mq-broker-rectangle-label, .mq-container-rectangle-label {
+  white-space:nowrap;
 }
 
 /** dashboard */
